2004-04-30  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/HelpBrowser/MonodocTreePad.cs: Hide doc nodes without
	any docs. This is an ugly ugly solution, but it works. Feel free
	to replace it with something better that looks nice.

2004-04-29  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: commenting out
	a GC.Collect () per lluis' instructions, this results in monodevelops
	cpu usage at idle going from 20% to 2%. Good stuff :)

2004-04-29  Todd Berman  <tberman@sevenl.net>

	* Gui/Dialogs/OptionPanels/ExternalToolPanel.cs: fix up to match gtk#
	from cvs.
	* Gui/Dialogs/ReferenceDialog/SelectReferenceDialog.cs:
	* Gui/Dialogs/ReferenceDialog/GacReferencePanel.cs:
	Now we actually pull assemblies from the gac.
	NOTE: Until gtk-sharp, and other libraries actually start using the gac
	it will not be possible to add a proper gac reference to them.
	This will be fixed on their end by beta1 however.

2004-04-28  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Project/AbstractProject.cs: Actually make that check
	and the others like it work.

2004-04-28  Todd Berman  <tberman@sevenl.net>

	* Internal/Project/Project/AbstractProject.cs: For now, dont ask
	to add new Makefiles.

2004-04-28  Todd Berman  <tberman@sevenl.net>

	* Commands/RunCommands.c:
	* Services/Project/DefaultProjectService.cs: 
	* Services/Project/IProjectService.cs: 
	* Internal/Codons/LanguageBinding/ILanguageBinding.cs:  
	* Internal/Project/Project/IncludeFilesDialog.cs:
	* Internal/Project/Combine/Combine.cs:
	* Internal/Project/Combine/CombineEntry.cs:

	Commit basically sets up the skeleton for the GenerateMakefiles stuff.
	Right now all the real code is in the LanguageBinding, where it
	should be (I think). Anyone looking to add this functionality to their
	LanguageBinding is welcome too, however the api and setup may change
	while the C# implementation is being written, so there are no
	promises at all.

