@@ -103,7 +103,8 @@ else
 enable_xdgmime="yes"
 fi
 
-AM_CONDITIONAL(ENABLE_DEBUGGER, test "x$enable_debugger" = "xyes")
+dnl AM_CONDITIONAL(ENABLE_DEBUGGER, test "x$enable_debugger" = "xyes")
+AM_CONDITIONAL(ENABLE_DEBUGGER, test "yes" = "no")
 AM_CONDITIONAL(ENABLE_XDGMIME, test "x$enable_xdgmime" = "xyes")
 
 dnl Intl
