@@ -1,3 +1,9 @@
+2004-05-01  Todd Berman  <tberman@sevenl.net>
+
+	* Gui/Pads/OpenTaskView.cs: Fix gtk+2.4 regression.
+	* Services/ParserService/DefaultParserService.cs: load assemblies
+	out of the GAC for indexing.
+
 2004-04-30  Todd Berman  <tberman@sevenl.net>
 
 	* Gui/Pads/HelpBrowser/MonodocTreePad.cs: Hide doc nodes without
